# Boids3D

./: .gitignore  CMakeLists.txt  CMakeLists.txt.in  Doxyfile  README.md  buildboids.bat  winmsvc.cmake
common/: controls.cpp
src/: Boids3D.fbp  Boids3DFrame.cpp  Boids3DFrame.h  BoidsUI.cpp  BoidsUI.h  alignmentbehavior.cpp  alignmentbehavior.hpp  avoidbordersbehavior.hpp  behavior.hpp  boid.cpp  boid.hpp  boid.shader  boidcanvas.cpp  boidcanvas.hpp  cohesionbehavior.cpp  cohesionbehavior.hpp  combinedbehavior.cpp  combinedbehavior.hpp  drawing.hpp  line.shader  main.cpp  perftimer.hpp  predator.shader  predatorbehavior.hpp  rendertimer.cpp  rendertimer.hpp  separationbehavior.cpp  separationbehavior.hpp  shader.cpp  shader.hpp  vector3d.hpp  world.cpp  world.hpp
test/: boid_test.cpp  vector3d_test.cpp  world_test.cpp
